# mcq-generator-flask

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
deploy/: README.md
deploy/nginx/: ip-whitelist.conf.example  mcq-generator.conf
deploy/scripts/: create-htpasswd.sh  generate-ssl.sh  setup-nginx.sh
src/: app.py  logging_config.py  run_worker.py  text_limits.py
src/services/: file_generator.py  job_queue.py  job_store.py  llm.py  llm_logging.py  question_generator.py  question_storage.py  redis_client.py  tasks.py  text_chunking.py  text_simplification.py
src/templates/: index.html
